--- a/SpaDay6/SpaDay6.csproj
+++ b/SpaDay6/SpaDay6.csproj
@@ -10,6 +10,7 @@
     <None Remove="Views\Spa\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="User\" />
     <Folder Include="Views\Spa\" />
   </ItemGroup>
 </Project>
